--- a/class-3.2/index.html
+++ b/class-3.2/index.html
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="icon" type="image/icon" href="image/demoIcon.png">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<!--row-1-->
+    <section style="background-color: wheat">
+        <div class="container">
+            <div class="row">
+                <div class="col-3 height-200"></div>
+                <div class="col-6 height-200"></div>
+                <div class="col-3 height-200"></div>
+            </div>
+        </div>
+    </section>
 
-
+<!--row-2-->
+    <section style="background-color: coral">
+        <div class="container">
+            <div class="row">
+                <div class="col-3 height-80">Home</div>
+                <div class="col-3 height-80">About</div>
+                <div class="col-3 height-80">Protfolio</div>
+                <div class="col-3 height-80">Gallery</div>
+            </div>
+        </div>
+    </section>
+<!--row-3-->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-2 height-600"></div>
+                <div class="col-8 height-600"></div>
+                <div class="col-2 height-600"></div>
+            </div>
+        </div>
+    </section>
+<!--row-4-->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-3 height-250"></div>
+                <div class="col-3 height-250"></div>
+                <div class="col-3 height-250"></div>
+                <div class="col-3 height-250"></div>
+            </div>
+        </div>
+    </section>
+<!--row-5-->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 height-50"></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
